Carico esercizio completo con bonus

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -12,13 +12,14 @@
 
       <nav>
         <ul>
-          <a href="#"><li>1</li></a>
-          <a href="#"><li>2</li></a>
-          <a href="#"><li>3</li></a>
+          <a href="#slide-1"><li>1</li></a>
+          <a href="#slide-2"><li>2</li></a>
+          <a href="#slide-3"><li>3</li></a>
         </ul>
       </nav>
 
       <div class="slide red">
+        <a name="slide-1"></a>
         <div class="prodotto">
           <img src="assets/img/01.png" alt="Superga">
           <h1>Il nostro modello di punta</h1>
@@ -26,6 +27,7 @@
       </div>
 
       <div class="slide green">
+        <a name="slide-2"></a>
         <div class="prodotto">
           <img src="assets/img/02.png" alt="Tommy Halfiger">
           <h1>Il nostro modello di punta</h1>
@@ -33,6 +35,7 @@
       </div>
 
       <div class="slide yellow">
+        <a name="slide-3"></a>
         <div class="prodotto">
           <img src="assets/img/03.png" alt="Converse">
           <h1>Il nostro modello di punta</h1>
